<resources>
    <string name="app_name">Jobstart</string>
    <string name="calendars">CALENDARS</string>
    <string name="job_postings">JOB POSTINGS</string>
    <string name="find_us">FIND US</string>
    <string name="donate">DONATE</string>
    <string name="updates">UPDATES</string>
    <string name="contact_us">CONTACT US</string>
    <string name="list_of_calendars">list of calendars</string>
    <string name="_2930_lake_shore_blvd_west">2930 Lake Shore Blvd. West</string>
    <string name="islington_avenue_lake_shore_blvd_west"><![CDATA[(Islington Avenue & Lake Shore Blvd. West)]]></string>
    <string name="jobstart_dufferin">JobStart Dufferin</string>
    <string name="_219_dufferin_street_suite_1c">219 Dufferin Street, Suite #1C</string>
    <string name="king_street_west_dufferin_street"><![CDATA[(King Street West & Dufferin Street]]></string>
    <string name="jobstart_chauncey">JobStart Chauncey</string>
    <string name="_41_chauncey_avenue">41 Chauncey Avenue</string>
    <string name="islington_avenue_south_of_bloor_street_west"><![CDATA[(Islington Avenue & south of Bloor Street West)]]></string>
    <string name="jobstart_lake_shore">JobStart Lake Shore</string>
    <string name="title_activity_find_us">Find Us</string>
    <string name="location_name">Location Name</string>
    <string name="location_direction">Location Direction</string>
    <string name="lake_shore_location">Lake Shore Location</string>
    <string name="dufferin_location">Dufferin Location</string>
    <string name="chauncey_location">Chauncey Location</string>
    <string name="jobstart_at_lakeshore">JobStart at Lakeshore</string>
    <string name="jobstart_at_dufferin">JobStart at Dufferin</string>
    <string name="jobstart_at_chauncey">JobStart at Chauncey</string>
    <string name="LakeJobCalendar">
        <![CDATA[<b>JobStart at Lakeshore</b>\n 2930 Lake Shore Blvd. West\n (Islington Avenue &amp; Lake Shore Blvd. West) ]]>
    </string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="_12_12_2019">12/12/2019</string>
    <string name="status">Status</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="job_details">Job Details</string>
    <string name="social_media">Social Media</string>
    <string name="twitter_jobstart">https://twitter.com/jobstartto</string>
    <string name="facebook_jobstart">https://www.facebook.com/JobStartTO/</string>
    <string name="linkedin_jobstart">https://www.linkedin.com/company/job-start/</string>
    <string name="youtube_jobstart">https://www.youtube.com/channel/UCcz4CSrzwM6ssUKQdmJ2c6g/featured</string>
    <string name="checkout_our_twitter_handle_jobstartto">Checkout our twitter handle @jobstartto</string>
    <string name="facebook_jobstart_checkout">Checkout our facebook page @JobStartTO</string>
    <string name="linkedin_checkout">Checkout our company page on LinkedIn @job-start</string>
    <string name="twitter_id">768850872436678656</string>
    <string name="we_have_a_youtube_page_too_jobstart">We have a YouTube page too! @JobStart</string>
    <string name="posted_date">Posted Date</string>
    <string name="event_data">Event Data</string>
</resources>
