<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="2dp"
    android:backgroundTint="@color/grey"
    android:elevation="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/xJobTitle"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/xJobType"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/xJobDate"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/_12_12_2019"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="NestedWeights" />


            <TextView
                android:id="@+id/xJobStatus"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/status"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>