<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:elevation="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/xHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:fitsSystemWindows="true"
        android:src="@drawable/homeimage" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xCalendars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/calendars"
            android:foreground="@drawable/ripple_rec"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xJobPostings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:foreground="@drawable/ripple_rec"
            android:text="@string/job_postings"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xFindUs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/find_us"
            android:foreground="@drawable/ripple_rec"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xDonate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:foreground="@drawable/ripple_rec"
            android:text="@string/donate"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xUpdates"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/updates"
            android:foreground="@drawable/ripple_rec"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary">

        <Button
            android:id="@+id/xContactUs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:foreground="@drawable/ripple_rec"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


</LinearLayout>