<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activities.ContactUsActivity">

    <include layout="@layout/app_bar"/>

    <android.support.design.card.MaterialCardView
        android:id="@+id/xLakeHide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/ripple_rec"
            android:gravity="center"
            android:text="@string/lake_shore_location"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/xLakeShoreView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="11">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/lake_shore_location"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="2930 Lake Shore Blvd  West Toronto, ON M8V1J4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="center"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:text="Opening Hours
\nMonday : 9am - 5 pm
\nTuesday : 9am - 7pm
\n​​Wed -Thurs : 9am - 5pm
\nFriday : 9am - 4pm"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/xLakeCall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/red"
                android:foreground="@drawable/ripple_rec"
                android:gravity="center"
                android:text="Telephone
Phone: \n416-231-2295 \nTTY : 711 (Relay Service)
\nFax: 416-253-2727"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </android.support.design.card.MaterialCardView>


    <android.support.design.card.MaterialCardView
        android:id="@+id/xDufferinHide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="2"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/ripple_rec"
            android:gravity="center"
            android:text="@string/dufferin_location"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/xDufferinView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="3"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="11">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/dufferin_location"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="219 Dufferin St. #1C King and Dufferin (South of King) Building 201, Suite 1C Toronto, ON M6K 3J1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:text="Opening Hours
\nMonday : 9am - 5 pm
\nTuesday : 9am - 7pm
\n​​Wed -Thurs : 9am - 5pm
\nFriday : 9am - 4pm"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/xDuffCall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/red"
                android:foreground="@drawable/ripple_rec"
                android:gravity="center"
                android:text="Telephone
Phone: \n416-231-2295 ext. 5721
\nTTY : 711 (Relay Service)
\nFax: 416-253-2728"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/xChaunceyHide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="2"
        android:backgroundTint="@color/colorPrimary"
        android:visibility="gone"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/chauncey_location"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/xChaunceyView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="3"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="11">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/chauncey_location"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="41 Chauncey Ave. Toronto, ON M8Z2Z2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="center"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:text="Opening Hours
\nMon - Thurs: 9am - 5pm
\n​​Friday: 9am - 4pm"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/xChaunCall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/red"
                android:foreground="@drawable/ripple_rec"
                android:gravity="center"
                android:text="Telephone
Phone: \n416-231-2295 \nTTY : 711 (Relay Service)
\nFax: 416-253-2700"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />
        </LinearLayout>
    </android.support.design.card.MaterialCardView>

</LinearLayout>